--- a/Typkonvertering Demos/Typkonvertering Demos.csproj
+++ b/Typkonvertering Demos/Typkonvertering Demos.csproj
@@ -3,12 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>Typkonvertering_Demos</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.21.2" />
-  </ItemGroup>
 
 </Project>
